--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -16,32 +16,98 @@
 
     <style>
 
+
+        ul{
+            height: 45px;
+        }
+        ul li{
+            height: 45px;
+        }
+
+        ul li a{
+            height: 45px;
+        }
+
+        .button-container {
+            display: flex;
+
+            margin: 5px auto;
+
+            flex-wrap: wrap;
+            justify-content: left;
+        }
+        .button {
+            display: flex;
+            overflow: hidden;
+
+            /* margin: 4px 10px; */
+            padding: 8px 20px;
+
+            cursor: pointer;
+            user-select: none;
+            transition: all 150ms linear;
+            text-align: center;
+            white-space: nowrap;
+            text-decoration: none !important;
+            text-transform: none;
+            text-transform: capitalize;
+
+            color: #fff;
+            /* border: 0 none; */
+            /* border-radius: 4px; */
+
+            font-size: 13px;
+            font-weight: 500;
+            line-height: 1.3;
+
+            -webkit-appearance: none;
+            -moz-appearance:    none;
+            appearance:         none;
+
+            justify-content: center;
+            align-items: center;
+            flex: 0 0 160px;
+
+            box-shadow: 2px 5px 10px var(--color-smoke);
+
+
+          }
+
+
+          .button.-regular {
+            color: white;
+            background: none;
+            border: solid white 2px;
+
+          }
+
+
     </style>
 
 
 </head>
 <body>
 
-    <div class="navbar-fixed" id="home">
-        <nav class="white">
-            <div class="container">
-                <div class="nav-wrapper">
-                    <a href="#" class="brand-logo" style=" color: black; font-family: 'Archivo Narrow', sans-serif;">H A C</span></a>
+    <div class="navbar-fixed" id="home" style="height: 45px; margin-top: -8px;">
+        <nav class="white" style="height: 45px;"> 
+            <div class="container" style="height: 45px; width: 100%;  margin-top: -3px;">
+                <div class="" style="height: 45px;">
+                    <a href="#" class="logo" style="color: black; text-align: center;"><span style="font-size: 1.5rem;font-family: quicksand;">H A C</span></a>
                     <a href="#" data-target="mobile-nav" class="sidenav-trigger">
                         <i class="material-icons" style="color: black;">menu</i>
                     </a>
-                    <ul class="right hide-on-med-and-down">
+                    <ul class="right hide-on-med-and-down" style="height: 45px;  font-family: profontwindows;">
                         <li  style="display: none;">
                             <a href="#home" style="color: #e71a1a;">home</a>
                         </li>
                         <li>
-                        <a href="#about" style="color: #e71a1a;">__about</a>
+                            <a href="#about" style="color: #e71a1a;">__about</a>
                         </li>
                         <li>
-                        <a href="#sponsors" style="color: #e71a1a;">_sponsors</a>
+                            <a href="#sponsors" style="color: #e71a1a;">_sponsors</a>
                         </li>
                         <li>
-                        <a href="#the_team" style="color: #e71a1a;">the_team</a>
+                            <a href="#the_team" style="color: #e71a1a;">the_team</a>
                         </li>
                     </ul>
                 </div>
@@ -53,49 +119,56 @@
             <a href="#about" style="color: #e71a1a;">home</a>
         </li>
         <li>
-            <a href="#about" style="color: #e71a1a;">__about</a>
+            <a href="#about" style="color: #e71a1a; font-family: profontwindows;">__about</a>
         </li>
         <li>
-            <a href="#sponsors" style="color: #e71a1a;">_sponsors</a>
+            <a href="#sponsors" style="color: #e71a1a; font-family: profontwindows;">_sponsors</a>
         </li>
         <li>
-            <a href="#the_team" style="color: #e71a1a;">the_team</a>
+            <a href="#the_team" style="color: #e71a1a; font-family: profontwindows;">the_team</a>
         </li>
     </ul>
 
+    
 
-    <div class="grid-container"  style=" padding: 1.5%;">
 
-        <div class="grid-child-1">
-            <div class="logo-div"  style="">
-                <img class="logo-img" src="..\..\static\design\images\HAC LOGO MAIN.png" alt="" style="">
+
+
+    <div class="grid-container"  style="margin: 2.5%;">
+
+        <div class="grid-child-1" style="">
+            <div class="logo-div" style="">
+                <img class="logo-img" src="..\..\static\design\images\HAC LOGO MAIN.png" alt="">
             </div>
         </div>
     
-        <div class="grid-child-2" style="text-align: center; color: white;">
+        <div class="grid-child-2" style="text-align: center; color: white; height: 100vh;">
     
-    
-            <div id="about" class="section scrollspy" style="">
-                <h1>About The Hackathon</h1>
-                <div>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ut fugiat a numquam voluptates corporis voluptatum quam ipsa repudiandae ea incidunt odit officia, quos, aspernatur in quas laborum tempore reprehenderit amet praesentium veritatis, necessitatibus dignissimos. Asperiores corrupti reprehenderit odit. Eius, modi. Molestias fugit animi possimus reiciendis provident, doloribus laborum et. Quae sit dignissimos modi optio alias nisi, quod dolorum enim. Voluptates repellendus obcaecati facere. Temporibus, blanditiis eligendi accusantium deserunt animi unde eaque adipisci vero quas. Aspernatur aliquid neque quaerat ex a quo sint quia velit, natus et eius laboriosam quos, harum unde saepe nisi facilis, dolores rem molestias! Incidunt molestiae sapiente praesentium eos eum deleniti reprehenderit exercitationem quis non labore, delectus ullam recusandae repudiandae culpa ipsa voluptates odio sint, dicta eius eveniet nulla voluptatum quo? Ducimus ea quae quidem repudiandae doloremque! Officia, similique necessitatibus. Ut accusantium, laboriosam quis fugiat quia necessitatibus nobis debitis facere, sit iste tempore voluptas culpa suscipit.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero in quas aperiam excepturi itaque sint accusantium nesciunt, officiis explicabo aut maxime. Excepturi corporis, officia officiis iusto minus assumenda, nulla perferendis accusamus delectus culpa error aut illo consequuntur soluta aliquid natus ea? Hic, illum mollitia adipisci recusandae minus provident natus consectetur, aliquam voluptatem molestiae omnis laborum. Facilis, earum magnam tempora quod repellendus iste. Obcaecati impedit ea eaque. Cupiditate blanditiis recusandae quod laborum tenetur culpa magni aliquam provident consequatur eligendi, repudiandae illo. Eum aut nam, incidunt qui architecto commodi dolorem reiciendis hic quae fugiat laboriosam distinctio consectetur unde voluptates totam dicta vitae labore? Porro a tempora ab officia eveniet ducimus dolorum fugiat modi aliquid? Officia adipisci dolorem qui? Iure distinctio quisquam sunt.
+            <div id="about" class="section scrollspy center-text-div">
+                <div style="">
+                    The long lockdowns have left people desiring to go out and socialise. The pandemic has left us with a heightened sense of precaution, one which might very well need to be carried forward. What makes us human is our ability to express ourselves but once our world reopens the precautions still need to be taken, meaning restricted interactions. To build a future where we can transcend these restrictions and continue to interact with our surroundings we need newer ways to interact with them.
+
+                    HAC (Hack Against Covid) is a Hackathon that challenges students to build proactive technology and solutions to safeguard human interaction in the coming future post covid19 pandemic.
                 </div>
-                </div>
+            </div>
+            <div class="grid-container-small" style="width: 90%;">
+                <a href="#"><div class="button -regular center inp-size-larger" style=""> Stay Updated</div></a>
+                <input type="text" class="inp-size" style="color: white; padding-left: 5px;">
+            </div>
     
-            <div id="sponsors" class="section scrollspy" style="">
-                <h1>Sponsors</h1>
+            <!-- <div id="sponsors" class="section scrollspy" style="">
+                <h1 style="font-family: quicksand;">Sponsors</h1>
                 <div>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci consequatur enim modi dolores eaque quasi, nihil impedit non harum corrupti dolorem eum sapiente omnis. Ab, delectus. Iure eligendi blanditiis similique repellat architecto sequi doloremque facere tenetur consequatur reiciendis. Totam consequatur nemo reprehenderit cupiditate quos ab doloremque quasi blanditiis at incidunt, atque culpa in labore excepturi, mollitia architecto quam quia, voluptatibus autem odio optio iusto! Laboriosam, quisquam aperiam earum tempora, vitae corporis omnis natus incidunt provident enim neque saepe explicabo sed quod dignissimos at perferendis molestias fuga delectus beatae quasi odit dolores atque? Provident quaerat sit placeat quibusdam iure nemo repellendus!
                 </div>
                 </div>
     
             <div id="the_team" class="section scrollspy" style="">
-                <h1>The Team</h1>
+                <h1  style="font-family: quicksand;"">The Team</h1>
                 <div>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque dolor, obcaecati ipsam possimus et ipsum ea. Fugit, temporibus! Illum asperiores voluptatibus ipsum libero repellendus, quam adipisci distinctio magni officiis quidem nam alias optio, dolore dolores, eligendi nihil in voluptas porro. Enim ut dolore consectetur voluptate praesentium inventore dolores asperiores voluptatum nemo illo labore ex, commodi officiis cupiditate, numquam perferendis rerum beatae velit est sunt optio sequi! Animi distinctio placeat voluptatibus, aperiam sunt provident harum ab porro itaque similique libero, impedit ipsa nemo, hic fugiat autem tenetur. Repellendus in, eveniet tenetur, sapiente iusto iure dolores aspernatur maxime corrupti quia ratione nemo asperiores sit adipisci necessitatibus. Vel atque accusamus nobis maxime inventore harum ipsam, earum perspiciatis molestias, odio sit nam tempora nostrum commodi rem debitis animi, culpa quasi porro magnam excepturi eum dolores. Voluptates optio illo error quas exercitationem eveniet soluta porro culpa. Adipisci illo corporis nobis temporibus dicta ipsa alias est, amet atque perspiciatis sed cum explicabo, ut, eius modi quidem iusto quisquam suscipit id facilis beatae unde eum omnis quos. Aliquid eveniet consequuntur minus voluptatum voluptates. Esse suscipit, atque rerum voluptatibus impedit, odit eum illo voluptatum a ipsam iusto blanditiis ut neque dicta! Odit, corrupti. Repudiandae repellendus possimus eaque dicta totam pariatur dolore praesentium quibusdam ea veniam alias tempora autem, eius, enim commodi saepe? Quis eos laudantium commodi. Doloremque ea possimus excepturi delectus sapiente eius dolor labore esse ut ab numquam at perferendis, amet natus fugit vel temporibus, laboriosam sed non nam blanditiis fugiat facere! Ipsa magni ipsum expedita nisi.
                 </div>
-            </div>
+            </div> -->
     
         </div>
 
