--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -71,15 +71,34 @@
             box-shadow: 2px 5px 10px var(--color-smoke);
 
 
-          }
+        }
 
 
-          .button.-regular {
+        .button.-regular {
             color: white;
             background: none;
             border: solid white 2px;
 
-          }
+        }
+
+        .div-outer {
+            position: relative;
+            background: pink;
+            height: 800px;
+            margin-bottom: 800px;
+        }
+        .div-inner {
+            position: fixed;
+            right: 0;
+            bottom: 50px;
+            width: 10%;
+            height: calc(100vh - 100px);
+            background: gold;
+        }
+        .bottom-div {
+            position: absolute;
+            bottom: 0;
+        }
 
 
     </style>
@@ -92,7 +111,7 @@
         <nav class="white" style="height: 45px;"> 
             <div class="container" style="height: 45px; width: 100%;  margin-top: -3px;">
                 <div class="" style="height: 45px;">
-                    <a href="#" class="logo" style="color: black; text-align: center;"><span style="font-size: 1.5rem;font-family: quicksand;">H A C</span></a>
+                    <a href="#" class="logo" style="color: black; text-align: center;"><span style="font-size: 1.3rem;font-family: quicksand;">H A C</span></a>
                     <a href="#" data-target="mobile-nav" class="sidenav-trigger">
                         <i class="material-icons" style="color: black;">menu</i>
                     </a>
@@ -129,55 +148,72 @@
         </li>
     </ul>
 
-    
-
-
-
-
+ 
     <div class="grid-container"  style="margin: 2.5%;">
 
         <div class="grid-child-1" style="">
             <div class="logo-div" style="">
-                <img class="logo-img" src="..\..\static\design\images\HAC LOGO MAIN.png" alt="">
+                <img class="logo-img" src="..\..\static\design\images\HAC LOGO MAIN.png" alt="" style="">
             </div>
         </div>
+
+         
+        <div class="grid-child-2" style="text-align: center; color: white;">
     
-        <div class="grid-child-2" style="text-align: center; color: white; height: 100vh;">
-    
-            <div id="about" class="section scrollspy center-text-div">
-                <div style="">
+            <div style="width: 100%; margin-bottom: 5%;" class="center-text-div"> 
+                <div style="font-size: 5rem; font-family: quicksand;">Code it for Covid.</div>
+            </div>
+
+            <div class="grid-container-small" style="width: 100%;">
+                <a href="#"><div class="button -regular center inp-size-larger" style=""> Stay Updated</div></a>
+                
+            </div>
+            
+            
+            <div id="about" class="section scrollspy about-text" style="">
+                <div style="padding: 2%; text-align: justify; font-size: 1.1rem;">
                     The long lockdowns have left people desiring to go out and socialise. The pandemic has left us with a heightened sense of precaution, one which might very well need to be carried forward. What makes us human is our ability to express ourselves but once our world reopens the precautions still need to be taken, meaning restricted interactions. To build a future where we can transcend these restrictions and continue to interact with our surroundings we need newer ways to interact with them.
 
                     HAC (Hack Against Covid) is a Hackathon that challenges students to build proactive technology and solutions to safeguard human interaction in the coming future post covid19 pandemic.
+                    <br><br>
+                    Come join and contribute from the safety and comfort of your homes.
+                    <div id="anchor-point" style="height: 1px;"></div>
+
                 </div>
             </div>
-            <div class="grid-container-small" style="width: 90%;">
-                <a href="#"><div class="button -regular center inp-size-larger" style=""> Stay Updated</div></a>
-                <input type="text" class="inp-size" style="color: white; padding-left: 5px;">
-            </div>
-    
-            <!-- <div id="sponsors" class="section scrollspy" style="">
-                <h1 style="font-family: quicksand;">Sponsors</h1>
-                <div>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci consequatur enim modi dolores eaque quasi, nihil impedit non harum corrupti dolorem eum sapiente omnis. Ab, delectus. Iure eligendi blanditiis similique repellat architecto sequi doloremque facere tenetur consequatur reiciendis. Totam consequatur nemo reprehenderit cupiditate quos ab doloremque quasi blanditiis at incidunt, atque culpa in labore excepturi, mollitia architecto quam quia, voluptatibus autem odio optio iusto! Laboriosam, quisquam aperiam earum tempora, vitae corporis omnis natus incidunt provident enim neque saepe explicabo sed quod dignissimos at perferendis molestias fuga delectus beatae quasi odit dolores atque? Provident quaerat sit placeat quibusdam iure nemo repellendus!
-                </div>
-                </div>
-    
-            <div id="the_team" class="section scrollspy" style="">
-                <h1  style="font-family: quicksand;"">The Team</h1>
-                <div>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque dolor, obcaecati ipsam possimus et ipsum ea. Fugit, temporibus! Illum asperiores voluptatibus ipsum libero repellendus, quam adipisci distinctio magni officiis quidem nam alias optio, dolore dolores, eligendi nihil in voluptas porro. Enim ut dolore consectetur voluptate praesentium inventore dolores asperiores voluptatum nemo illo labore ex, commodi officiis cupiditate, numquam perferendis rerum beatae velit est sunt optio sequi! Animi distinctio placeat voluptatibus, aperiam sunt provident harum ab porro itaque similique libero, impedit ipsa nemo, hic fugiat autem tenetur. Repellendus in, eveniet tenetur, sapiente iusto iure dolores aspernatur maxime corrupti quia ratione nemo asperiores sit adipisci necessitatibus. Vel atque accusamus nobis maxime inventore harum ipsam, earum perspiciatis molestias, odio sit nam tempora nostrum commodi rem debitis animi, culpa quasi porro magnam excepturi eum dolores. Voluptates optio illo error quas exercitationem eveniet soluta porro culpa. Adipisci illo corporis nobis temporibus dicta ipsa alias est, amet atque perspiciatis sed cum explicabo, ut, eius modi quidem iusto quisquam suscipit id facilis beatae unde eum omnis quos. Aliquid eveniet consequuntur minus voluptatum voluptates. Esse suscipit, atque rerum voluptatibus impedit, odit eum illo voluptatum a ipsam iusto blanditiis ut neque dicta! Odit, corrupti. Repudiandae repellendus possimus eaque dicta totam pariatur dolore praesentium quibusdam ea veniam alias tempora autem, eius, enim commodi saepe? Quis eos laudantium commodi. Doloremque ea possimus excepturi delectus sapiente eius dolor labore esse ut ab numquam at perferendis, amet natus fugit vel temporibus, laboriosam sed non nam blanditiis fugiat facere! Ipsa magni ipsum expedita nisi.
-                </div>
-            </div> -->
-    
         </div>
+    </div>
+
+    <div class="grid-container" style="margin-top: 20%;">   
+        <!-- <div class="grid-child-3" style="text-align: center; color: white;;">
+            <div id="sponsors" class="section scrollspy" style="">
+                <h1 style="font-family: quicksand;">Sponsors</h1>
+                <div style="font-size: 4rem; margin-bottom: 30%;">
+                    Github <br>
+                    Dev.2
+                </div>
+            </div>      
+        </div>
+
+        <div class="grid-child-4" style="text-align: center; color: white; height: 100vh;">
+            <div id="sponsors" class="section scrollspy" style="">
+                <h1 style="font-family: quicksand;">Sponsors</h1>
+                <div style="font-size: 4rem; margin-bottom: 30%;">
+                    Github <br>
+                    Dev.2
+                </div>
+            </div>
+        
+        </div> -->
 
     </div>
     
         
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     
     <script>
+
         // Sidenav
         const sideNav = document.querySelector('.sidenav');
         M.Sidenav.init(sideNav, {});
@@ -186,6 +222,20 @@
         const ss = document.querySelectorAll('.scrollspy');
         M.ScrollSpy.init(ss, {});
 
+        var targetOffset = $("#anchor-point").offset().top;
+
+        var $w = $(window).scroll(function(){
+            if ( $w.scrollTop() > targetOffset-500 ) {  
+                 
+                // $('.logo-div').delay("slow").css({"position":"relative"});
+                $('.logo-div').hide(500);
+                // $('.logo-div').delay("slow").css({"position":"relative"});
+            } else {
+                // $('.logo-div').css({"position":"fixed"});
+                $('.logo-div').show(500);
+                // $('.logo-div').css({"position":"fixed"});
+            }
+        });
     </script>
 </body>
 </html>
