--- a/static/design/css/styles.css
+++ b/static/design/css/styles.css
@@ -40,7 +40,7 @@ body {
 	display: block;
 	margin-left: auto;
 	margin-right: 27.5%;
-	margin-top: 32.5%;
+	margin-top: 25%;
 	width: 50%;
 }
 
@@ -154,7 +154,7 @@ body {
 	height: 34px;
 }
 
-@media screen and (max-width: 810px) {
+@media screen and (max-width: 820px) {
 	nav {
 		position: relative;
 	}
@@ -181,6 +181,7 @@ body {
 	.logo-div {
 		position: relative;
 		width: 90%;
+		margin-left: 7.5%;
 	}
 
 	.center-text-div {
@@ -213,7 +214,7 @@ body {
 	.grid-child-2 {
 	}
 	.about-text {
-		margin-top: 40%;
+		margin-top: 50%;
 		/* padding-bottom: 30%; */
 		padding-right: 5%;
 		padding-left: 5%;
@@ -257,7 +258,7 @@ body {
 	}
 
 	.details {
-		margin-top: 40%;
+		margin-top: 10%;
 		/* padding-bottom: 30%; */
 		padding-right: 5%;
 		padding-left: 5%;
