--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -132,7 +132,7 @@
                             <a href="#sponsors" style="color: #e71a1a;">_sponsors</a>
                         </li>
                         <li>
-                            <a href="#the_team" style="color: #e71a1a;">the_team</a>
+                            <a href="#details" style="color: #e71a1a;">__details</a>
                         </li>
                     </ul>
                 </div>
@@ -150,7 +150,7 @@
             <a href="#sponsors" style="color: #e71a1a; font-family: profontwindows;">_sponsors</a>
         </li>
         <li>
-            <a href="#the_team" style="color: #e71a1a; font-family: profontwindows;">the_team</a>
+            <a href="#details" style="color: #e71a1a; font-family: profontwindows;">__details</a>
         </li>
     </ul>
 
@@ -164,12 +164,12 @@
         </div>
 
          
-        <div class="grid-child-2 centered" style="text-align: center; color: white;">
+        <div  id="stay_updated"  class="grid-child-2 centered" style="text-align: center; color: white;">
     
             <div style="width: 100%;" class="center-text-div"> 
                 <div class="covid-class" style="">Code it for <span  id="codeit">Covid</span>.</div>
                 <div class="grid-container-small centered" style="width: 100%;">
-                    <a id="stay_updated" href="#"><div class="button -regular center"> Stay Updated</div></a>    
+                    <a id="conduct1" href="#"><div class="button -regular center"> Stay Updated</div></a>    
                 </div>
             </div>
 
@@ -209,9 +209,9 @@
                 </div>      
             </div>
 
-            <div class="details section scrollspy" style="margin-bottom: 25%;">
+            <div id="details" class="details section scrollspy " style="margin-bottom: 25%;">
                 <h1 class="sponsor-text" style="padding: 10% 2%;">Hackathon Details</h1>
-                <a href="#stay_updated"><div style="padding: 2%;font-size: 1.4rem; text-align: left;">We'll be coming forward with the details soon. Till then, <span style="color: #d52d30;">Stay updated</span>.</div></a> 
+                <a id="conduct2" href="#"><div style="padding: 2%;font-size: 1.4rem; text-align: left; color: #eeeeee;">We'll be coming forward with the details soon. Till then, <span style="color: #d52d30;">Stay updated</span>.</div></a> 
             </div>
         </div>
     </div>
@@ -274,6 +274,10 @@
                 $('#codeit').css('color', 'white');
             });
         });
+
+        $('#conduct1').click( function() { alert("The form is comin' up. Stay seated!"); });
+        $('#conduct2').click( function() { alert("The form is comin' up. Stay seated!"); });
+
 
     </script>
 
